# forense-ai

./: .env.example  .gitignore  AGENTS.md  INFT.md  README.md  docker-compose.yml  identity.json  package.json
.pi/: APPEND_SYSTEM.md
.specify/: AGENTS.md  init-options.json
.specify/memory/: constitution.md  feature-log.md
.specify/research/: github-repos.md
apps/backend/: alembic.ini
apps/frontend/: tailwind.config.ts
backend/: init.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_organizations.py  005_case_state_transitions.py  006_audit_log.py  007_number_sequences.py  011_refresh_tokens.py  014_storage_configs.py  015_evidences.py  016_evidence_events.py
backend/app/: config.py
backend/app/api/v1/: auth.py  cases.py  evidences.py  members.py  recovery.py  router.py  storage_config.py
backend/app/domain/: tokens.py
backend/app/middleware/: rate_limit.py
backend/app/models/: auth.py  case.py  organization.py  user.py
backend/app/repositories/: case_repository.py
backend/app/schemas/: case.py  case_member.py  evidence.py
backend/app/services/: admin_service.py  auth_service.py  case_member_service.py  case_number_service.py  case_service.py  storage_config_service.py
backend/app/storage/: hashing.py
backend/tests/: conftest.py  test_auth_service.py  test_case_service.py  test_evidence_service.py  test_rls.py  test_state_machine.py  test_storage_providers.py
frontend/: package.json  tsconfig.json
metadata/: manifest.json  metadata.template.json
scripts/: setup.sh
soul/: neural_soul.md
(+93 files in other folders)
